# kitty-shop

./: .gitignore  TODO.md  conftest.py  manage.py  pyproject.toml
apps/cart/: admin.py  models.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py
apps/home/: urls.py  views.py
apps/home/templates/home/: index.html
apps/product/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_alter_product_managers_product_is_deleted_and_more.py  0003_alter_product_managers_comment_is_confirmed_and_more.py  0004_alter_category_options.py
apps/product/templates/product/: all.html  single.html
apps/product/templates/product/my/: all.html  create.html  edit.html
apps/user/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_avatar.py
apps/user/templates/user/: login.html  register.html  user.html
kittyshop/: asgi.py  settings.py  urls.py  wsgi.py
templates/: main.html
