[tool.poetry]
name = "kittyshop"
version = "0.1.0"
description = "A simple shop in django"
authors = ["yasaman <yasamankarimi600@yahoo.com>"]
license = "ICS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
psycopg = "^3.1.12"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
django-stubs = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
