[tool.poetry]
name = "kittyshop"
version = "0.1.0"
description = "A simple shop in django"
authors = ["yasaman <yasamankarimi600@yahoo.com>"]
license = "ICS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
psycopg = "^3.1.12"
pillow = "^10.0.1"
django-debug-toolbar = "^4.2.0"
ipython = "^8.16.1"
whitenoise = "^6.6.0"
django-bootstrap5 = "^23.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
django-stubs = "^4.2.4"
django-extensions = "^3.2.3"
pytest = "^7.4.3"
mock = "^5.1.0"
pytest-django = "^4.7.0"
pytest-pudb = "^0.7.0"
pytest-mock = "^3.12.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kittyshop.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    ".venv",
    "{arch}",
    "ssf",
    "static",
    "scripts",
]
addopts = [
    "--no-migrations",
    "--strict-markers",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
build-backend = "poetry.core.masonry.api"
